# glvr

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.bat  compile_commands.json  run.bat
include/: glad.c  glad.h
res/: transform2d.vert  uniformColor.frag  vertexColor.frag
res/shaders/: basic.vert  screenPos.frag  uniformColor.frag  upsideDown.vert  vertexColor.frag
src/: bmp.cpp  bmp.hpp  glad.c  main.cpp  mesh.hpp  shader.cpp  shader.hpp  textureFormat.hpp
